add Apache & PHP setup

--- a/requirements.yml
+++ b/requirements.yml
@@ -2,5 +2,10 @@
 
 - role: geerlingguy.postgresql
   version: 2.0.1
+  # src: git+https://github.com/geerlingguy/ansible-role-postgresql
 
-# src: git+https://github.com/geerlingguy/ansible-role-postgresql
+- name: geerlingguy.apache
+  version: 3.1.0
+- name: geerlingguy.php
+  version: 3.7.0
+
