--- a/setup.yml
+++ b/setup.yml
@@ -5,4 +5,6 @@
     - role: geerlingguy.postgresql
     - role: geerlingguy.apache
     - role: geerlingguy.php
+      tags: php
     - role: local.adminer
+      tags: adminer
