--- a/roles/local.adminer/tasks/main.yml
+++ b/roles/local.adminer/tasks/main.yml
@@ -3,3 +3,16 @@
   file:
     path: '{{ adminer_directory }}'
     state: directory
+
+- name: Download Adminer file
+  get_url:
+     url: '{{ adminer_download_url }}'
+     dest: '{{ adminer_directory }}/index.php'
+     checksum: '{{ adminer_checksum }}'
+
+- name: Enable adminer to connect DB
+  seboolean:
+     name: httpd_can_network_connect_db
+     state: yes
+     persistent: yes
+  when: ansible_selinux
